[Bugfix] - location edit on small screens

--- a/www/src/media/templates/site/survivants/css/user.sass
+++ b/www/src/media/templates/site/survivants/css/user.sass
@@ -89,3 +89,6 @@ footer, .footer
 
 body.site
   background-color: var(--survivants-color-primary)
+
+nav.navbar a
+  font-size: 1.2rem
